--- a/globals.css
+++ b/globals.css
@@ -1,5 +1,31 @@
+.header-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  background-color: red;
+}
 .title{
-  font-size: 40px;
+  font-size: 48px;
   font-weight: 500;
   color: black;
+}
+.search-bar{
+  display: flex;
+  width: 15%;
+  height: 10%;
+}
+body{
+  width: 100%;
+  height: 100%;
+}
+.title-container{
+  display: flex;
+  flex-direction: row;
+}
+.img{
+  width: 100px;
+  height: 100px;
 }
