--- a/globals.css
+++ b/globals.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   flex-direction: column;
-  background-color: red;
+  gap: 15px;
 }
 .title{
   font-size: 48px;
@@ -16,6 +16,7 @@
   display: flex;
   width: 15%;
   height: 10%;
+  border-radius: 5%;
 }
 body{
   width: 100%;
@@ -24,8 +25,6 @@ body{
 .title-container{
   display: flex;
   flex-direction: row;
-}
-.img{
-  width: 100px;
-  height: 100px;
+  gap: 15px;
+  align-items: center;
 }
