--- a/globals.css
+++ b/globals.css
@@ -12,7 +12,7 @@ body {
 .title{
   font-size: 48px;
   font-weight: 500;
-  color: white;
+  color: black;
 }
 .search-bar{
   display: flex;
@@ -31,10 +31,9 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 25%;
+  width: 100%;
   height: 100%;
   align-items: center;
-  overflow: scroll;
   align-self: center;
   border-color: black;
   border-radius: 15px;
@@ -71,14 +70,29 @@ a,
   font-family:'Arial';
   font-weight: 300;
   color: black;
-  width: 75%;
+  width: 25%;
   height: 100%;
   display: flex;
+  margin-left: 1%;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.chevron {
+  width: 15%;
+  background: red;
+  align-self: flex-end;
+}
+
+.recipe-title-container{
+  width: 85%;
+  background: red;
 }
 
 .divider{
-  width: 75%;
+  width: 24%;
+  margin-left: 1%;
   height: 1px;
   background-color: lightgray;
 }
