--- a/globals.css
+++ b/globals.css
@@ -36,7 +36,7 @@ body {
   align-items: center;
   align-self: center;
   border-color: black;
-  border-radius: 15px;
+  border-radius: 15px
 }
 
 .material-symbols-outlined {
@@ -70,7 +70,7 @@ a,
   font-family:'Arial';
   font-weight: 300;
   color: black;
-  width: 25%;
+  width: 75%;
   height: 100%;
   display: flex;
   margin-left: 1%;
@@ -91,8 +91,8 @@ a,
 }
 
 .divider{
-  width: 24%;
-  margin-left: 1%;
+  width: 72%;
+  margin-left: 3%;
   height: 1px;
   background-color: lightgray;
 }
